--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "filepond": "^4.7.4",
+    "filepond-plugin-image-preview": "^4.5.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth2": "^0.2.0"
