--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.583.0",
+    "cloudinary": "^1.17.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -16,9 +18,11 @@
     "filepond-plugin-image-preview": "^4.5.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
+    "middleware": "^1.0.0",
     "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth2": "^0.2.0"
